--- a/website/templates/website/index.html
+++ b/website/templates/website/index.html
@@ -12,6 +12,7 @@
             um diferencial no diferente. Roupas de grif com cara de pirata mas sendo 300% original, se rasgar tem
             multa.</p>
         </div>
+        
         <div class="col-6">
             <p class="p">Contando com a ajuda dos mais qualificados atendentes coletados no jovem aprendiz, se faz assim carente
             um atendimento de qualidade, o que fez com que surgisse a necessidade desse sistema, estagiários de todos
@@ -25,12 +26,16 @@
             criar um sistema SisRoupas para gerenciar suas roupas de forma efetiva e completa (desculpa ainda
             falta uma parte do sistema)</p>
         </div>
+
         <div class="col-4">
-            <figure>
-                <img class="img" src="{% static 'img/imagem1.jpg' %}" alt="SisRoupas">
-                <p class="p">Moça não inclusa</p>
-            </figure>
             
+            <div class="card" style="width: 18rem;">
+                <img src="{% static 'img/imagem1.jpg' %}" class="card-img-top" alt="...">
+                <div class="card-body">
+                <p class="card-text">Mulher Comprando roupas Feliz no KeroRoupas.<br>(Mulher não inclusa na compra)</p>
+            </div>
+        </div>
+
         </div>
         <div class="col-4">
             <p class="p">Roupas com texturas exuberantes de florzinhas, ou roupas exoticas com cara de onça temos aqui tbm,
