--- a/website/templates/website/roupas_details.html
+++ b/website/templates/website/roupas_details.html
@@ -2,19 +2,29 @@
 {% load static %}
 
 {% block main %}
+    
     <br>
     <div class="row">
         <div class="col-4">
-            <p class="p-align">Camisa de Grife</p>
-            <img src="{% static 'img/grife.jpg' %}" alt="SisRoupas" class="img">>
+            <figure class="figure">
+                <img src="{% static 'img/grife.jpg' %}" class="figure-img img-fluid rounded" alt="Camisa de grife">
+                <figcaption class="figure-caption text-right">Camisa de Grife</figcaption>
+            </figure>
         </div>
         <div class="col-4">
-            <p>Camisa Original</p>
-            <img src="{% static 'img/original.jpg' %}" alt="SisRoupas" class="img">
+            <figure class="figure">
+                <img src="{% static 'img/original.jpg' %}" class="figure-img img-fluid rounded" alt="Camisa de grife">
+                <figcaption class="figure-caption text-right">Camisa 100% Original</figcaption>
+            </figure>
+        </div>
         </div>
         <div class="col-4">
-            <p>Calça da Moda Feminina</p>
-            <img src="{% static 'img/calca_fem.jpg' %}" alt="SisRoupas" class="img">>
+        <div class="col-4">
+            <figure class="figure">
+                <img src="{% static 'img/original.jpg' %}" class="figure-img img-fluid rounded" alt="Camisa de grife">
+                <figcaption class="figure-caption text-right">Camisa 100% Original</figcaption>
+            </figure>
+        </div>
         </div>
 
     </div>
