--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -16,8 +16,11 @@
     <div class="container">
         <div class="row row-space">
             <div class="col-8">
-                <h1>Sistema de Alugueis de Roupas</h1>
-                <span>Trabalhando para garantir o pão</span>
+                <h1>
+                KeroRoupas
+                <br>
+                <small class="text-muted">Trabalhando para ganhar o pão</small>
+                </h1>
             </div>
             <div class="col-4">
                 <img src="{% static 'img/roupas.jpg' %}" alt="SisRoupas" width="320" height="205">
