--- a/website/templates/website/menu.html
+++ b/website/templates/website/menu.html
@@ -2,7 +2,7 @@
     <div class="col-12">
         <ul class="nav nav-pills nav-fill">
             <li class="nav-item">
-                <a class="nav-link active" href="#">Home</a>
+                <a class="nav-link active" href="{% url 'website_home' %}">Home</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'website_roupas_details'%}">Roupas</a>
