--- a/website/templates/website/sobre.html
+++ b/website/templates/website/sobre.html
@@ -6,9 +6,41 @@
         <div class="col-6">
             Somos uma empresa responsável que está aqui pro que der e vier.
         </div>
+        Estamos localizados em:
         <div class="col-6">
-                Estamos localizados em:
-                <img src="{% static 'img/maps.jpg' %}" alt="SisRoupas">
+                <img src="{% static 'img/maps.jpg' %}" alt="SisRoupas" class="img">
         </div>
     </div>
+
+    
+        <div class="col">
+            <div class="dropdown-menu">
+                <form class="px-4 py-3">
+                    <div class="form-group">
+                    <label for="exampleDropdownFormEmail1">Email address</label>
+                    <input type="email" class="form-control" id="exampleDropdownFormEmail1" placeholder="email@example.com">
+                </div>
+                <div class="form-group">
+                    <label for="exampleDropdownFormPassword1">Password</label>
+                    <input type="password" class="form-control" id="exampleDropdownFormPassword1" placeholder="Password">
+                </div>
+                <div class="form-group">
+                    <div class="form-check">
+                    <input type="checkbox" class="form-check-input" id="dropdownCheck">
+                    <label class="form-check-label" for="dropdownCheck">
+                        Remember me
+                    </label>
+                    </div>
+                </div>
+                <button type="submit" class="btn btn-primary">Sign in</button>
+                </form>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">New around here? Sign up</a>
+            <a class="dropdown-item" href="#">Forgot password?</a>
+            </div>
+        </div>
+        
+
+
+
 {% endblock %}
